--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,56 +4,63 @@ layout: default
 
 <!-- about.html -->
       <div class="post">
-        <header class="post-header">
-          <h1 class="post-title">
-           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
-          </h1>
-          <p class="desc">{{ page.subtitle }}</p>
-        </header>
 
-        <article>
-          {% if page.profile -%}
-          <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
-            {%- if page.profile.image %}
-              {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
-              {% include figure.html 
-              path=profile_image_path 
-              class="img-fluid z-dept-1 rounded"
-              alt=page.profile.image -%}
-            {% endif -%}
-            {%- if page.profile.address %}
-            <div class="address">
-              {{ page.profile.address }}
-            </div>
-            {%- endif %}
-          </div>
-          {%- endif %}
+	<div class="profile">
+	  <div class="row">
+	    <div class="left-column-title">
+	      <center>
+		<header class="post-header">
+		  <h3 class="post-title">
+		    {% if site.title == "blank" -%}<span class="font-weight-bold title">{{ site.first_name }} {{ site.last_name }}</span>{%- else -%}{{ site.title }}{%- endif %}
+		  </h3>
+		</header>
+	      </center>
+	    </div>
+	    <div class="right-column">
+	    </div>
+	    
+	    <div class="left-column">
+	      <center>
+		{%- if page.profile.image %}
+		{%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
+		{% include figure.html 
+		path=profile_image_path 
+		class="img-fluid z-dept-1 rounded img"
+		alt=page.profile.image -%}
+		{% endif -%}		
+	      </center>
+	    </div>
+	    <div class="right-column-vertical-center">
+	      {{ page.profile.contact }}
+	    </div>
+	  </div>
+	</div>
 
-          <div class="clearfix">
-            {{ content }}
-          </div>
 
-          {% if page.news -%}
-          <!-- News -->
-          {%- include news.html %}
-          {%- endif %}
-          {% if page.selected_papers -%}
-            <!-- Selected papers -->
-            {%- include selected_papers.html %}
-          {%- endif %}
-          {%- if page.social %}
-          <!-- Social -->
-          <div class="social">
-            <div class="contact-icons">
+	<div>
+          {{ content }}
+	</div>
+
+	
+        {% if page.news -%}
+        <!-- News -->
+        {%- include news.html %}
+        {%- endif %}
+        {% if page.selected_papers -%}
+        <!-- Selected papers -->
+        {%- include selected_papers.html %}
+        {%- endif %}
+        {%- if page.social %}
+        <!-- Social -->
+        <div class="social">
+          <div class="contact-icons">
             {% include social.html %}
-            </div>
-
-            <div class="contact-note">
-              {{ site.contact_note }}
-            </div>
-            
           </div>
-          {%- endif %}
-        </article>
-
+	  
+          <div class="contact-note">
+            {{ site.contact_note }}
+          </div>
+          
+        </div>
+        {%- endif %}	
 </div>
