--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,7 @@
 
 
 // Colors
-$red-color:           #FF3636 !default;
+$red-color:           #e84c33 !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
 $blue-color:          #0076df !default;
@@ -28,8 +28,8 @@ $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
-$white-color: #ffffff !default;
-$black-color: #000000 !default;
+$white-color: #fefef7 !default;
+$black-color: #404040 !default;
 
 
 // Theme colors
