--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -511,8 +511,10 @@ footer.sticky-bottom {
         abbr {
           display: inline-block;
           background-color: var(--global-theme-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
+          margin-left: 0.1rem;
+          margin-right: 0.1rem;
           a {
             color: white;
             &:hover {
