--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -532,12 +532,19 @@ footer.sticky-bottom {
       }
       .author {
         a {
-          border-bottom: 1px dashed var(--global-theme-color);
           &:hover {
               border-bottom-style: solid;
               text-decoration: none;
           }
+
         }
+	.undergrad {
+            border-bottom: 1px dashed;
+	}
+	.masters {
+            border-bottom: 1px dashed;
+	}	  
+	
         > em {
           border-bottom: 1px solid;
           font-style: normal;
