--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,5 +1,10 @@
 
           <div class="publications">
             <h2>Selected Publications</h2>
+
+	    <p>
+	      For a complete list, see my <a href="/publications">publications</a> page.
+	    </p>
+	    
             {% bibliography -f papers -q @*[selected=true]* %}
           </div>
