--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -697,3 +697,22 @@ html.transition *:after {
   font-size: 0.875rem;
   padding-top: 0.25rem;
 }
+
+// album buy buttons
+.album-links {
+    text-align: center;
+    
+    a.btn {
+	color: var(--global-text-color);
+	border: 1px solid var(--global-text-color);
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	&:hover {
+            color: var(--global-theme-color);
+            border-color: var(--global-theme-color);
+	}
+    }
+}
+
