--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,9 @@ layout: default
         <div class="post">
 
           <header class="post-header">
+	    {% if page.hide_title == nil or page.hide_title == false %}	    
             <h1 class="post-title">{{ page.title }}</h1>
+	    {% endif %}
 	    {% if page.hide_description == nil or page.hide_description == false %}
             <p class="post-description">{{ page.description }}</p>
 	    {% else %}
