--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,6 @@ layout: parse
     {% include scripts/misc.html %}
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
+    {% include scripts/progressBar.html %}
   </body>
 </html>
