--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -106,6 +106,8 @@
 
   {% include scripts/jquery.html %}
   {% include scripts/bootstrap.html %}
+  {% include scripts/analytics.html %}
+  {% include scripts/progressBar.html %}
   <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
 
 </html>
