--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,14 +60,20 @@
                   {%- if child.title == 'divider' %}
                   <div class="dropdown-divider"></div>
                   {%- else %}
-                  <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
+		  
+                  <a class="dropdown-item" href="{{ url }}">{{ child.title }}</a>
                   {%- endif -%}
                   {% endfor %}
                 </div>
               </li>
               {%- else %}
               <li class="nav-item {% if page.title == p.title %}active{% endif %}">
-                <a class="nav-link" href="{{ p.url | relative_url }}">{{ p.title }}
+		{% if p.external %}
+		{% assign url = p.permalink %}
+		{% else %}
+		{% assign url = p.url | relative_url %}
+		{% endif %}
+                <a class="nav-link" href="{{ url }}">{{ p.title }}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
