--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
                   <div class="dropdown-divider"></div>
                   {%- else %}
 		  
-                  <a class="dropdown-item" href="{{ url }}">{{ child.title }}</a>
+                  <a class="dropdown-item" href="{{ child.permalink }}">{{ child.title }}</a>
                   {%- endif -%}
                   {% endfor %}
                 </div>
