added teaching page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -44,9 +44,10 @@ figure, img {
 blockquote {
   background: var(--global-bg-color);
   border-left: 2px solid var(--global-theme-color);
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  font-size: 1.2rem;
+  margin-top: 0.5em;
+  margin-bottom: 1.0em;
+  padding-left: 0.5em;
+  //font-size: 1.2rem;
 }
 
 // Math
