--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -42,7 +42,7 @@
               {%- for coauthor in site.data.coauthors[true_last_name] -%}
                 {%- if coauthor.firstname contains author.first -%}
                   {%- assign coauthor_url = coauthor.url -%}
-	          {% capture mentee_class %}{% if coauthor.status == 'M' %}class="masters"{% elsif coauthor.status == 'U' %}class="undergrad"{% endif %}{% endcapture %}
+	          {% capture mentee_class %}{% if coauthor.status == 'P' %}class="phd"{% elsif coauthor.status == 'M' %}class="masters"{% elsif coauthor.status == 'U' %}class="undergrad"{% endif %}{% endcapture %}
                   {%- break -%}
                 {%- endif -%}
               {%- endfor -%}
