--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -550,7 +550,10 @@ footer.sticky-bottom {
 	.masters {
             border-bottom: 1px dashed;
 	}	  
-	
+	.phd {
+            border-bottom: 1px dashed;
+	}
+	      
         > em {
           border-bottom: 1px solid;
           font-style: normal;
